make the bgMusic work

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
             </div>
 
             <div class="card-front card-face">
-                <img class="ghg ghg-topLeft-carbondioxide edenz" src="assets/images/ffloodz.png" alt="Image of Flood">
-                <img class="ghg ghg-topRight-N2O eden" src="assets/images/fdesertification.png" alt="Image of Desert">
+                <img class="ghg ghg-topLeft-carbondioxide eden" src="assets/images/ffloodz.png" alt="Image of Flood">
+                <img class="ghg ghg-topRight-N2O edenz" src="assets/images/fdesertification.png" alt="Image of Desert">
                 <img class="ghg ghg-bottomLeft-cfc" src="assets/images/femissions.png" alt="Image of Emission">
                 <img class="ghg ghg-bottomRight-methane" src="assets/images/fwildfire.png" alt="Image of Wildfire">
                 <img class="win-match" src="assets/images/windturbine.png" alt="Image of Windturbine">
