--- a/index.html
+++ b/index.html
@@ -28,24 +28,30 @@
         <span class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav justify-content-center naveLinks mr-auto">
-                    <li class="active nav-item mr-2"><a class="nav-link hvr-grow-shadow" href="#"><span>Welcome</span></a></li>
-                    <li class="nav-item mr-2"><a class="nav-link hvr-grow-shadow" href="#climateChangeGame" data-toggle="modal" data-target="#staticBackdrop1"><i class="fas fa-play fa-lg"></i><span>Play Game</span></a></li>
+                <ul class="navbar-nav naveLinks justify-content-center mr-auto">
+                    <li class="active nav-item mr-2"><a class="nav-link hvr-grow-shadow active" href="#"><i class="fas fa-home"></i> <span>Welcome</span></a></li>
+                    <li class="nav-item mr-2"><a class="nav-link hvr-grow-shadow" href="#climateChangeGame" data-toggle="modal" data-target="#staticBackdrop1"><i class="fas fa-play fa-lg"></i> <span>Play Game</span></a></li>
                     
                     <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login" data-bs-toggle="modal" data-bs-target="#exampleModal">Sign Up</a></li>
                 </ul>
             </div>
             <div class="d-none d-md-block">
                 <p class="navbar-text my-auto mr-2"><i>More Subliminal Games!</i></p>
-                <a href="/login" class="btn btn--cta btn-lg btn--red hvr-grow-shadow" data-bs-toggle="modal" data-bs-target="#exampleModal">Sign Up</a>
+                <a href="/login" class="btn btn--cta btn--red hvr-grow-shadow" data-bs-toggle="modal" data-bs-target="#exampleModal">Sign Up</a>
                 
             </div>
         </nav>
 
         <!-----------------------------------------MAINPAGE-------------------------------------------------------------->
 
+
+
+
+
+
+
 <div class="fluid welcome-page mt-5">
-     <!-- <div class="opaque-overlay">&nbsp;</div> -->
+   
     <div class="row">
         <div class="col-12">
             <section class="callout jumbotron text-center">
@@ -239,6 +245,7 @@ Adjustment or preparation of natural or human systems to a new or changing envir
         </div>
 
  </div>
+   <div class="opaque-overlay">&nbsp;</div>
 </div>
 
  
