--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="fluid welcome-page">
             <div class="row">
                 <div class="col-12 justify-content-center">
-                    <section class="callout jumbotron text-center">
+                    <section class="callout jumbotron d-none d-md-block text-center">
                         <h1 class="jumbotron-header">Climate Change and Effect</h1>
                         <hr class="block-divider block-divider--orange" />
                         <p class="lead">
@@ -81,7 +81,7 @@
                                 <p>These impacts are expected to intensify in the coming decades.</p>
                             </div>
                         </div>
-                        <button class="btn btn-lg btn--cta btn--red expandToggle" onclick="myFunction()">Read More..</button>
+                        <button class="btn btn-lg btn--cta btn--red hvr-grow-shadow expandToggle" onclick="myFunction()">Read More..</button>
                     </section>
                 </div>
 
@@ -93,7 +93,7 @@
 
                     
                         <div class="col-md-6">
-                            <button class="btn btn--red climateButton btn-primary" type="button" data-toggle="collapse" data-target="#collapseGerms" aria-expanded="false" aria-controls="collapseGerms">
+                            <button class="btn btn--red climateButton hvr-grow-shadow btn-primary" type="button" data-toggle="collapse" data-target="#collapseGerms" aria-expanded="false" aria-controls="collapseGerms">
                                 Most used climate Change Jargons
                             </button>
                             <div class="collapse" id="collapseGerms">
@@ -149,7 +149,7 @@
 
                          <!-- English Selection-->
                     <div class="col-md-6">
-                        <button class="btn btn--red climateButton btn-primary" type="button" data-toggle="collapse" data-target="#collapseTerms" aria-expanded="false" aria-controls="collapseTerms">
+                        <button class="btn btn--red hvr-grow-shadow climateButton btn-primary" type="button" data-toggle="collapse" data-target="#collapseTerms" aria-expanded="false" aria-controls="collapseTerms">
                             Play the Climate Change Game
                         </button>
                         <div class="collapse" id="collapseTerms">
@@ -259,18 +259,96 @@
 
         <!-------------------------------footer-contacts---->
 
-        <footer class="container-fluid footerContainer my-5">
+
+
+
+<footer class="container-fluid footerContainer my-5">
+
+
+
+    <div class="row no gutters" id="footer-contents">
+    <div class="col-12 d-sm-none d-md-block d-lg-none contacts">
+    <p>
+    <i class=" fas fa-phone-square-alt"></i> +31 099900000 <br>
+    <i class="fas fa-envelope mt-3"></i> rozdandy@gmail.com
+    </p>
+    </div>
+    </div>
+
+
+ <div class="row">
+  <div class="col-lg-4 d-none d-sm-block d-md-none d-lg-block contactslg">
+  <p>
+    <i class=" fas fa-phone-square-alt"></i> +31 099900000 <br>
+    <i class="fas fa-envelope mt-3"></i> rozdandy@gmail.com
+ </p>
+ 
+  </div>
+   <div class="col-lg-4 ">
+        <ul class="list-inline social-media">
+          <li class="list-inline-item">
+            <a href="https://www.facebook.com/" target="_blank">
+              <i class="fab fa-facebook-f"></i>
+            <span class="sr-only" aria-hidden="true">Facebook</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://twitter.com/" target="_blank">
+              <i class="fab fa-twitter"></i>
+            <span class="sr-only" aria-hidden="true">Twitter</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.instagram.com/" target="_blank">
+               <i class="fab fa-instagram-square" aria-hidden="true"></i>
+                <span class="sr-only">Instagram</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    <div class="col-lg-4 d-none d-lg-block d-none d-xl-block contacts">
+         <p><i class="fas fa-map-marker-alt"></i> Rotterdam <br> The Netherlands </p>
+        <br/>
+    </div>
+  </div>
+    
+   </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- <footer class="container-fluid footerContainer my-5">
             <div id="footer-contents" class="row no-gutters">
                 <div class="col-sm-6 contacts">
                     <h5 class="uppercase footer-header">contacts:</h5>
                     <p class="inline-block contacts">
                         Ibadan, Oyo Nigeria.
                     </p>
-                </div>
+                </div> -->
 
                 <!-------------------------------footer-socialMedia---->
 
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ul class="list-inline social-media">
                         <li class="list-inline-item">
                             <a target="_blank" href="https://www.facebook.com/">
@@ -299,7 +377,14 @@
                     </ul>
                 </div>
             </div>
-        </footer>
+        </footer> -->
+
+
+
+
+
+
+
 
         <!--Navbar  Modal For PlayGame link -->
         <div class="modal fade" id="staticBackdrop1" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdrop1" aria-hidden="true">
